--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,39 @@
-K8SVERSION=1.27.4
-DOCKER_HUBUSERURL=registry.cn-hongkong.aliyuncs.com/hyc-q/base
-kubeadm config images list --kubernetes-version=${K8SVERSION} 2>/dev/null > K8sv1.27.4.txt
-for i in `cat K8sv1.27.4.txt`;do
-  echo skopeo copy --all docker://${i} docker://${DOCKER_HUBUSERURL}/${i##*/}
-done
+# 1.首先，在workflow文件中定义触发器，例如每次推送到主分支时触发同步操作。
+# 工作流名称
+name: Sync-Images-to-ali-Example
+# 工作流运行时显示名称
+run-name: ${{ github.actor }} is Sync Images to ali.
+# 怎样触发工作流
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+ 
+ 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+ 
+ 
+# 2.添加一个job来执行同步操作。在workflow文件中，添加一个job 并指定使用的操作系统环境。
+# 工作流程任务（通常含有一个或多个步骤）
+jobs:
+  syncimages:
+    runs-on: ubuntu-latest
+    # 在job中添加步骤来执行同步操作。在上述job中，添加步骤来执行skopeo命令，从registry.k8s.io仓库拉取镜像，并将其推送到阿里云仓库。
+    steps:
+    - name: Checkout Repos
+      uses: actions/checkout@v3
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2.9.1
+      # 登录到阿里云镜像仓库  
+    - name: Login to Alibaba Cloud Container Registry  
+      run: |  
+        echo "${{ secrets.ALIYUN_DOCKER_PASSWORD }}" | docker login --username="${{ secrets.ALIYUN_DOCKER_USERNAME }}" --password-stdin registry.cn-hongkong.aliyuncs.com
+    
+    # 使用shell命令批量同步所需的镜像到阿里云镜像仓库中
+    - name: Use Skopeo Tools Sync Image to ali
+      run: |
+        #!/usr/bin/env bash
+        skopeo copy --all docker://registry.k8s.io/kube-state-metrics:v2.10.0 docker://registry.cn-hongkong.aliyuncs.com/hyc-q/base/kube-state-metrics:v2.10.0
