--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,4 +36,5 @@ jobs:
     - name: Use Skopeo Tools Sync Image to ali
       run: |
         #!/usr/bin/env bash
+        echo "Qhjhw@4859" | docker login --username="aliyun5227949009" --password-stdin registry.cn-hongkong.aliyuncs.com
         skopeo copy --all docker://docker.io/centos:7 docker://registry.cn-hongkong.aliyuncs.com/hyc-q/base/centos:7
