--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to ali
       run: |
         #!/usr/bin/env bash
-        skopeo copy --all docker://docker.io/centos:7 docker://registry.cn-hongkong.aliyuncs.com/hyc-q/centos:7
+        skopeo copy --all docker://registry.k8s.io/kube-state-metrics:v2.10.0 docker://registry.cn-hongkong.aliyuncs.com/hyc-q/kube-state-metrics:v2.10.0
