--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to ali
       run: |
         #!/usr/bin/env bash
-        skopeo copy --all docker://registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.0 docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/kube-state-metrics:v2.10.0
+        skopeo copy --all docker://registry.k8s.io/kube-state-metrics/node-exporter:v1.8.1 docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/node-exporter:v1.8.1
