--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to ali
       run: |
         #!/usr/bin/env bash
-        skopeo copy --all docker://docker.io/wurstmeister/kafka:3.5.7 docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/wurstmeister/kafka:3.5.7
+        skopeo copy --all docker://docker.io/wurstmeister/kafka:3.5.7 docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/kafka:3.5.7
