--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to ali
       run: |
         #!/usr/bin/env bash
-        skopeo copy --all docker://docker.io/iwangle/go-rag:v0.0.1  docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/go-rag:v0.0.1
+        skopeo copy --all docker://docker.io/node:20-alpine  docker://registry.cn-hangzhou.aliyuncs.com/hyc-q/node:20-alpine
